@@ -5,6 +5,8 @@ import net.ltgt.gradle.errorprone.*
 import org.gradle.api.tasks.testing.logging.*
 import org.springframework.boot.gradle.tasks.bundling.BootJar
 
+val argumentosJvmSemAvisoUnsafe = listOf("--sun-misc-unsafe-memory-access=allow")
+
 plugins {
     java
     jacoco
@@ -17,6 +19,10 @@ plugins {
 }
 
 tasks.withType<JavaCompile>().configureEach {
+    options.isFork = true
+    options.forkOptions.jvmArgs = (options.forkOptions.jvmArgs ?: mutableListOf()).apply {
+        addAll(argumentosJvmSemAvisoUnsafe)
+    }
     options.compilerArgs.addAll(listOf("-Xlint:unchecked", "-Xlint:deprecation"))
     options.errorprone {
         disableAllChecks = true
@@ -208,6 +214,7 @@ tasks.withType<Test> {
         "-Dmockito.ext.disable=true",
         "-Xshare:off",
         "-XX:+EnableDynamicAgentLoading",
+        *argumentosJvmSemAvisoUnsafe.toTypedArray(),
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
         "--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED"
@@ -406,6 +413,7 @@ pitest {
         "-Xms512m",
         "-XX:+EnableDynamicAgentLoading",
         "-Xshare:off",
+        *argumentosJvmSemAvisoUnsafe.toTypedArray(),
         "--add-opens=java.base/java.lang=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
         "--add-opens=jdk.unsupported/sun.misc=ALL-UNNAMED"
